# repo-test

./: LICENSE  pyproject.toml  req.txt  service_math_config.toml  test.py  vg
debug/: debug.json
debug copy/: debug.json
proto/: service_math_solve.proto
