[project]
name = "repo-test"
description = "Simple .py for test repository for practic"
version = "0.0.1"
dependencies = [
    "fastapi==0.115.12",
    "latex2sympy2==1.9.1",
    "loguru==0.7.3",
    "mpmath==1.3.0",
    "pydantic==2.11.5",
    "sympy==1.14.0",
    "toml==0.10.2",
    "uvicorn==0.34.2",
    "grpcio-tools",
    "grpcio-reflection",
    "gitpython",
    "protofileseyemath@git+https://github.com/dagahan/EyeMath_protosPY"
]


